2008-08-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Making multiracial avatars work again in BG if only SI with the expansion
	  is installed. Also, added the system paths "<ULTIMA7_STATIC>" and
	  "<SERPENT_STATIC>" that always point to the static directory of the games
	  (preferring the expansions).

2008-08-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug #2036349.

2008-08-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Made armageddon spell behave like originals. Made Armageddon immunity into
	  settable trait in ES.
	* Fixed Petra's portrait when body switched.

2008-07-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* New NPCs created with ES now have their 'walk' flag turned on by default.

2008-07-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed some apparent lock-ups due to palettes not being updated.
	* Improved talk dialog in SI when double-clicking someone already within
	  talking distance.
	* Fixed uninitialized variable.

2008-07-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Minor bugfixes to Keyring and SI Fixes mods.
	* UCC: Fixed usecode class inheritance. Fixed test1.uc so that it compiles.
	* gamemgr/*: Mod manager bug which showed entries for some games that were
	  not present.
	* palette.cc: Prevent palettes from being applied if the game is faded out.
	* objs/jawbone.cc: Missing return in function.
	* usecode/ucxt/src/ucdata.cc: printf parameter was wrong.

2008-07-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed old-style "response" conversations. They work identically to converse
	  case blocks now, but are slightly less versatile (e.g., there is no "remove"
	  keyword). "response" dialogs can also specify multiple strings now through
	  the "in" keyword; see test1.uc for examples.
	  Also, added a possible "default" case for converse-case blocks, and a
	  "user_choice" expression which pushes the last-selected answer in the stack.
	* Fixed SI turtle (bug #2020101).